in sprint1 more error messages

--- a/sprint1/userDocs/Sprint1.html
+++ b/sprint1/userDocs/Sprint1.html
@@ -335,6 +335,16 @@
 					<td>error(valuesnotvalid)</td>
 				</tr>
 				<tr>
+					<td>Reply</td>
+					<td>error</td>
+					<td>error(indoorempty)</td>
+				</tr>
+				<tr>
+					<td>Reply</td>
+					<td>error</td>
+					<td>error(trolleystopped)</td>
+				</tr>
+				<tr>
 					<th>Request</th>
 					<td>pickUpRequest</td>
 					<td>pickUpRequest(TOKENID)</td>
