--- a/sprint2/userDocs/Sprint2.html
+++ b/sprint2/userDocs/Sprint2.html
@@ -196,7 +196,11 @@
 
 	<h2>Sprint Backlog</h2>
 	<div class="remark">
-		For this second sprint, we will cover the following requirements:
+		In this second sprint, we will add the logic for both the Manager Service and Sensor Service. We will also
+		implement the webServer and the GUI for both the client and the manager. The transport trolley will still be mocked.
+		<br>
+
+		The following requirements will be covered:
 		<ul class="requirementsList">
 			<li>The client can book a parking slot through ParkServiceGUI (<k>F1</k>)</li>
 			<li>When client try to do acceptIN or acceptOUT, if the transport trolley is stopped, the client should see
@@ -211,35 +215,89 @@
 			<li>ParkManagerService should notify the parking manager when the OUTDOOR is not cleaned within DTFREE
 				interval of time (<k>F16</k>)</li>
 		</ul>
+
 	</div>
 
 
 	<h2>Sprint</h2>
 	<div class="remark">
-			For this sprint, it was necessary to fully implement the managerservice actor, that is the actor appointee to
-			manage all the requests that come from the parking manager.<br>
+
+		<h3>ParkingDevicesStatus</h3>
+		The information regarding the trolley state, the fan state and the sensors state are kept inside the kotlin class
+		<code style="font-size: 15px">ParkingDevicesStatus</code>. As the requirements only required us to comunicate the
+		temperature value among all the sensors, in the following code we update only this value. However, should it be
+		necessary to comunicate other sensor values in the future, we saved it in a map inside the
+		<code style="font-size: 15px">ParkingDevicesStatus</code>. In order to send the state, it can be serialized as
+		JSON. <br>
+		Here is reported a UML graph of these classes.
+
+		<img src="img/ParkingDevicesStatusUML.png" alt="ParkingDevicesStatus UML">
+
+
+		<h3>ManagerService</h3>
+		The ManagerService actor is the component responsible for handling the interaction with the Manager. Its behaviour
+		can be described as a Moore State Machine. In the <k>idle</k> state, it will update the state resource, making it
+		readable through CoAP. From the <k>idle</k> state, it can handle several request and events:
+		<ul>
+			<li>when it receives the reply sensorValue from the thermometer, it will go to the <k>updateSensorReading</k>
+				state. Here it will update the ParkingDevicesStatus with the temperature value.</li>
+			<li>when it receives the request readStatus, it will go to the <k>update</k> state. Here it will update the
+				ParkingDevicesStatus with the trolley state and fan state. It will then send a requestValue to the
+				thermometer. The request readStatus is sent at intervals by the web client, in order to keep the GUI
+				updated.</li>
+			<li>when it receives the request stopTrolley, it will go to the <k>handleStopTrolley1</k> state. If the
+				temperature is over TMAX, it will stop the trolley, otherwise it will reply with an error. It will then
+				go to the <k>update</k> state.</li>
+			<li>when it receives the request resumeTrolley, it will go to the <k>handleResumeTrolley</k> state. Here it
+				will simply forward the request to the trolley. It will then go to the <k>update</k> state.</li>
+			<li>when it receives the event timeout, it will go to the <k>dtFreeTimeout</k> state. Here it will simply set
+				the outdoorAlarm inside the ParkingDevicesStatus to true.</li>
+			<li>when it receives the event carLeftOutdoor, it will go to the <k>resetAlarmOutdoor</k> state. Here it will
+				simply set the outdoorAlarm inside the ParkingDevicesStatus to false.</li>
+		</ul>
+
+		<br>
+		Below is reported the corresponding UML graph. The full model can be found <a href="../src/model.qak">here</a>. <br>
+		<img src="img/ManagerServiceFSM.png" alt="ManagerService FSM">
+
+		<!-- SensorService, why something -->
+		<h3>SensorService</h3>
+		The SensorService actor is the component responsible for automating the stop and restart of the fan (<k>F15</k>).
+		This task was not assigned to the ManagerService in order to increase the degree of parallelism of the system.
+		It will cycle between the two state, <k>tempLow</k> and <k>tempHigh</k>, when it receives the event underTMAX and
+		aboveTMAX. Within each state it simply send the dispatches to the fan. <br>
+		Below is reported the corresponding UML graph. <br>
+
+		<img src="img/SensorServiceFSM.png" alt="SensorService FSM">
+
+
 		<h3>Interactions between users and ParkManagerService</h3>
-			The User Interface will be a single page application for the clients and another single page application for
-			the parking manager. The application will be accessible via a normal web browser. This way users
-			do not need to install a specific application to use this service and there will be less effort in maintaining
-			one specific application for each Operative System. Of course, the web page will be responsive and
-			usable both on computers and smartphones.<br>
-			For this reason, the client side application will be written using HTML5, CSS3 and javascript, using
-			jQuery and bootstrap as frameworks for both the graphics elements and the interactive web page.<br>
-			The server instead will be a spring web server. It was chosen in order to use the same code written in kotlin
-			for the model even in the webserver.<br>
-			The web server will then send all the requests to the ctxservice via CoAP messages. This way the webserver
-			and the application could be in two separate machines. In addition, both components can be replaced
-			with another (e.g. a node web server), as long as they continue to use the same communication protocol.<br>
-			The requests are forwarded to the parkingservice if they come from a client, and to the managerservice actor
-			if they come from the parking manager.<br>
-			For the retrieval of the parking area status, it was used the CoAP observable property of the qak actors:
-			the managerservice has the representation of the status, formatted in json, as state of the resource. In this
-			way every time that the managerservice wants to know the status, simply reads the state of the resource.<br>
-			We decided to not use observers that listens for changes of the status in real time, since it is not required
-			that the ParkServiceStatusGUI updates in real time.<br>
-			All the messages between the web server and the parkingservice actor were already defined in sprint 1.<br>
-			The following CoAp messages are exchanged between the web server and the managerservice actor:
+
+		The User Interface will be a single page application for the clients and another single page application for
+		the parking manager. The application will be accessible via a normal web browser. This way users do not need to
+		install a specific application to use this service and there will be less effort in maintaining one specific
+		application for each Operative System. Of course, the web page will be responsive and usable both on computers
+		and smartphones.<br>
+
+		For this reason, the client side application was written using HTML5, CSS3 and javascript, using jQuery and
+		bootstrap as frameworks for both the graphics elements and the interactive web page.<br>
+		The server instead will be a spring web server. It was chosen in order to use the same code written in kotlin
+		for the model even in the webserver.<br>
+
+		The web server interacts with the ctxservice, the context containing the ParkingService, ManagerService, and the
+		SensorService, via Coap messages. This allows to deploy the web server and the application in two different machines. This also allows
+		to replace one of the component in the future (e.g. a node web server) as long as they continue to use the same
+		communication protocol.<br>
+
+		The requests are forwarded to the ParkingService if they come from a client, and to the ManagerService actor
+		if they come from the parking manager.<br>
+
+		Since it is not required that theParkServiceStatusGUI updates the status in real time, and it is not critical for
+		the manager to see it in real time, we decided not to use observers. Instead, the page will automatically update
+		only the status every ten seconds.<br>
+
+		All the messages between the web server and the ParkingService actor were already defined in sprint 1.<br>
+		The following CoAp messages are exchanged between the web server and the ManagerService actor:
 
 		<table>
 			<tr>
@@ -273,25 +331,33 @@
 				<td>error(valuesnotvalid)</td>
 			</tr>
 		</table>
-		The state is stored inside the ParkingDevicesStatus, encoded in JSON.<br>
-		As stated in the requirements analysis, the current state only includes the temperature sensor, but, in order
-		to make this extendable, we saved the sensors in a HashMap. This way adding new sensors should be pretty straightforward.<br>
-		<!-- we will cover the managerService and the sensorService, uml state for both?  -->
-		managerservice uses polling to retrieve the measure from sensor.
+		<br>
+		A documentation of the API endpoints created is available <a href="openapi.yaml">here</a> in yaml format
+		and <a href="openapi.html">here</a> as an interactive webPage.
 	</div>
 
 	<h2>Testing</h2>
 	<div class="remark">
 		Some new testing classed were added: now it is necessary to test that the managerservice requests works fine,
-		and that the spring application reply correctly to the requests.
-		<a href="../test/eu/musarellatripi/test/TestPlan2.kt">sprint2</a>
+		and that the spring application reply correctly to the requests.<br>
+		The tests about managerservice are inserted in <a href="../core/test/eu/musarellatripi/test/TestPlan2.kt">TestPlan2.kt</a>.
+		Every test has a comment that explain "role".<br>
+		The tests about the spring reply are inserted in <a href="../web/src/test/kotlin/eu/musarellatripi/webapp/WebappApplicationTests.kt">WebappApplicationTests.kt</a>.
 
 	</div>
 
-	<h2>Sprint Review</h2>
+	<h2>Execution</h2>
 	<div class="remark">
-		<!-- present current work, introduce future developments -->
+		In order to execute the application, is now necessary, to start both the qak and web server.
+		To start the qak server, it is necessary to go to the sprint2/core folder and run
+		<pre>./execute.bat run</pre>
+		or, on Linux
+		<pre>./execute.sh run</pre>
+		And for the web server, to go to the sprint2/web folder and run
+		<pre>gradle bootRun</pre>
 	</div>
+
+
 	<div class="remark" style="background-color: white; text-align: center">
 		<a href="../../sprint0/userDocs/ParkManagerService.html">Go back to main document</a>
 	</div>
