--- a/sprint2/userDocs/Sprint2.html
+++ b/sprint2/userDocs/Sprint2.html
@@ -197,7 +197,7 @@
 	<h2>Sprint Backlog</h2>
 	<div class="remark">
 		In this second sprint, we will add the logic for both the Manager Service and Sensor Service. We will also
-		implement the webServer and the GUI for both the client and the manager. The transport trolley will still be mocked.
+		implement the web server and the GUI for both the client and the manager. The transport trolley will still be mocked.
 		<br>
 
 		The following requirements will be covered:
@@ -231,7 +231,7 @@
 		JSON. <br>
 		Here is reported a UML graph of these classes.
 
-		<img src="img/ParkingDevicesStatusUML.png" alt="ParkingDevicesStatus UML">
+		<img src="img/ParkingDevicesStatusUML.png" style="max-width: 100%" alt="ParkingDevicesStatus UML">
 
 
 		<h3>ManagerService</h3>
@@ -257,8 +257,8 @@
 		</ul>
 
 		<br>
-		Below is reported the corresponding UML graph. The full model can be found <a href="../src/model.qak">here</a>. <br>
-		<img src="img/ManagerServiceFSM.png" alt="ManagerService FSM">
+		Below is reported the corresponding UML graph. The full model can be found <a href="../core/model.qak">here</a>. <br>
+		<img src="img/ManagerServiceFSM.png" style="max-width: 100%" alt="ManagerService FSM">
 
 		<!-- SensorService, why something -->
 		<h3>SensorService</h3>
@@ -268,7 +268,7 @@
 		aboveTMAX. Within each state it simply send the dispatches to the fan. <br>
 		Below is reported the corresponding UML graph. <br>
 
-		<img src="img/SensorServiceFSM.png" alt="SensorService FSM">
+		<img src="img/SensorServiceFSM.png" style="max-width: 100%" alt="SensorService FSM">
 
 
 		<h3>Interactions between users and ParkManagerService</h3>
