--- a/sprint2/userDocs/Sprint2.html
+++ b/sprint2/userDocs/Sprint2.html
@@ -229,7 +229,7 @@
 		necessary to comunicate other sensor values in the future, we saved it in a map inside the
 		<code style="font-size: 15px">ParkingDevicesStatus</code>. In order to send the state, it can be serialized as
 		JSON. <br>
-		Here is reported a UML graph of these classes.
+		Here is reported a UML graph of these classes.<br>
 
 		<img src="img/ParkingDevicesStatusUML.png" style="max-width: 100%" alt="ParkingDevicesStatus UML">
 
