--- a/sprint0/userDocs/ParkManagerService.html
+++ b/sprint0/userDocs/ParkManagerService.html
@@ -848,9 +848,14 @@
 					<li>Transport trolley: 1 day</li>
 				</ol></li>
 			<li>
-				ParkManagerService core: 2 days
+				ParkManagerService core: 7 days
+				<ol>
+					<li>client logic: 4 days</li>
+					<li>manager logic: 2 days</li>
+					<li>tests: 1 day</li>
+				</ol>
 			</li>
-			<li>API endpoints for 2 GUI: 3h</li>
+			<li>API endpoints for 2 GUI: 8h</li>
 			<li>ParkServiceGUI (total 10h)
 				<ol>
 					<li>Design (including chose of theme): 3h</li>
@@ -865,16 +870,23 @@
 			</li>
 		</ol>
 		One day of work is equal to 8 working hours.<br>
-		Total work estimate: 6 days and 4.5 hours.
+		Total work estimate: 12 days and 1.5 hours.
 	</div>
 
 	<h2>Project</h2>
 	<div class="remark">
 		The project will be divided in sprint.<br>
 
-		<a href="../../sprint1/userDocs/Sprint1.html">Sprint 1</a><br>
+		<ul>
+			<li><a href="../../sprint1/userDocs/Sprint1.html">Sprint 1</a>, implementation of client logic</li>
 
-		<a href="../../sprint2/userDocs/Sprint2.html">Sprint 2</a>
+			<li><a href="../../sprint2/userDocs/Sprint2.html">Sprint 2</a>, implementation of manager logic and
+				client's and manager's GUI</li>
+
+			<li><a href="../../sprint3/userDocs/Sprint3.html">Sprint 3</a>, implementation of trolley actions</li>
+
+			<!-- <li><a href="../../sprint4/userDocs/Sprint4.html">Sprint 4</a>, implementation of mocked sensors, logging</li>-->
+		</ul>
 	</div>
 
 	<h2>Testing</h2>
